[package]
name = "tileview"
description = "run tiled commands in a single terminal"
repository = "https://github.com/tforgione/tileview"
version = "0.1.0"
authors = ["Thomas Forgione"]
edition = "2021"
license = "GPL-3.0"
keywords = ["multiplexer", "multiview", "command", "tile"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pty-process = "0.4.0"
termion = "2.0.1"
unicode-width = "0.1.11"
